<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tv_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#303030"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Administrator" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="20dp"
                android:text="@string/name"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bordes_redondos"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_instrument"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="15dp"
                android:text="@string/instrument"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/et_instrument"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bordes_redondos"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_band"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="15dp"
                android:text="@string/actually_band"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/et_band"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bordes_redondos"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_oldband"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="15dp"
                android:text="@string/old_band"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/et_oldband"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bordes_redondos"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnAddData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="15dp"
                android:text="@string/add" />

            <Button
                android:id="@+id/btnviewAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:text="@string/show" />

            <Button
                android:id="@+id/btnviewUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:text="@string/update" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:text="@string/delete" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>