<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#303030"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="History" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:srcCompat="@android:color/background_light"
                android:layout_marginTop="10dp"
                android:id="@+id/photo"
                android:contentDescription="@string/photo" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/somos_la_nueva_par_s_de_noia_una_formaci_n_renovada_en_la_cual_catorce_grandes_profesionales_estamos_trabajando_a_diario_con_much_simas_ganas_y_cargados_de_una_enorme_ilusi_n_convencidos_de_que_podemos_ganarnos_vuestros_aplausos_y_de_que_conseguiremos_sorprenderos_gratamente_actuaci_n_tras_actuaci_n"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/pero_llegaron_nuevos_tiempos_y_nuevas_tendencias_musicales_los_a_os_80_con_la_fiebre_de_las_discotecas_el_pop_y_el_rock_es_el_momento_del_cambio_y_paris_de_noia_se_apunt_con_ilusi_n_a_este_nuevo_reto_se_trataba_de_conjugar_los_gustos_de_los_m_s_mayores_con_el_cambio_que_ped_a_la_juventud_gallega_a_partir_de_aqu_la_carrera_musical_de_paris_de_noia_se_convierte_en_una_l_nea_ascendente_estando_actualmente_considerada_como_una_de_las_mejores_orquestas_de_galicia_esto_se_debe_al_trabajo_constante_y_meticuloso_a_una_fuerte_inversi_n_en_material_escenogr_fico_de_luz_y_sonido_pero_sobre_todo_por_contar_con_los_mejore_m_sicos_del_panorama_actual_todos_estos_factores_hacen_que_paris_de_noia_act_e_sin_apenas_descanso_durante_todo_el_a_o"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/actualmente_la_plantilla_de_esta_orquesta_est_formada_por_14_m_sicos_un_t_cnico_de_sonido_dos_t_cnicos_de_iluminaci_n_6_t_cnicos_de_montaje_contamos_con_un_gran_escenario_m_vil_con_lo_ltimo_en_iluminaci_n_y_sonido"
                android:textColor="#ffffff" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>

